tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_return_extern_fn_pure.objc3
module MisplacedQualifierAfterReturnExternFnPure;

extern fn add(lhs: i32, rhs: i32) -> i32 pure;

fn main() -> i32 {
  return 0;
}
